Yazım Hatası Degisiklikleri

--- a/AspNetMvcBlog/App.Web.Mvc/Views/Auth/Register.cshtml
+++ b/AspNetMvcBlog/App.Web.Mvc/Views/Auth/Register.cshtml
@@ -13,15 +13,15 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="inputEmail4">Name</label>
-                <input type="email" class="form-control" id="inputName" placeholder="Email">
+                <input type="email" class="form-control" id="inputName" placeholder="Name">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword4">Last Name</label>
-                <input type="password" class="form-control" id="inputLastName" placeholder="Password">
+                <input type="password" class="form-control" id="inputLastName" placeholder="Lastname">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword4">User Name</label>
-                <input type="password" class="form-control" id="inputUserName" placeholder="Password">
+                <input type="password" class="form-control" id="inputUserName" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
