--- a/AspNetMvcBlog/App.Web.Mvc/Views/Auth/ForgotPassword.cshtml
+++ b/AspNetMvcBlog/App.Web.Mvc/Views/Auth/ForgotPassword.cshtml
@@ -9,8 +9,8 @@
             
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">User Name</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="exampleInputUserName">User Name</label>
+            <input type="password" class="form-control" id="exampleInputUserName" placeholder="Enter UserName">
         </div>
         <button type="submit" class="btn btn-info">Submit</button>
     </div>
