--- a/AspNetMvcBlog/App.Web.Mvc/Views/Home/Index.cshtml
+++ b/AspNetMvcBlog/App.Web.Mvc/Views/Home/Index.cshtml
@@ -1,79 +1,14 @@
-﻿@Html.Partial("_PartialHomeHeader")
+﻿@Html.Partial("_PartialHeader")
+
+<!--search overlay start-->
+@Html.Partial("_PartialSearch")
+<!--search overlay end-->
 
 <section class="slider mt-4">
 	<div class="container-fluid">
 		<div class="row no-gutters">
-			<div class="col-lg-12 col-sm-12 col-md-12 slider-wrap">
-				<div class="slider-item">
-					<div class="slider-item-content">
-						<div class="post-thumb mb-4">
-							<a href="blog-single.html">
-								<img src="..//images/slider/slider1.jpg" alt="" class="img-fluid">
-							</a>
-						</div>
-						<div class="slider-post-content">
-							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Lifestyle</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Tips for Taking a Long-term Trip</a></h3>
-							<span class=" text-muted  text-capitalize">January 2, 2019</span>
-						</div>
-					</div>
-				</div>
-				<div class="slider-item">
-					<div class="slider-item-content">
-						<div class="post-thumb mb-4">
-							<a href="blog-single.html">
-								<img src="..//images/slider/slider2.jpg" alt="" class="img-fluid">
-							</a>
-						</div>
-						<div class="slider-post-content">
-							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Travel</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Trip to California</a></h3>
-							<span class=" text-muted  text-capitalize">September 15, 2019</span>
-						</div>
-					</div>
-				</div>
-				<div class="slider-item">
-					<div class="slider-item-content">
-						<div class="post-thumb mb-4">
-							<a href="blog-single.html">
-								<img src="..//images/slider/slider3.jpg" alt="" class="img-fluid">
-							</a>
-						</div>
-						<div class="slider-post-content">
-							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">weekends</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Our Favorite Weekend Getaways</a></h3>
-							<span class=" text-muted  text-capitalize">June 12, 2019</span>
-						</div>
-					</div>
-				</div>
-				<div class="slider-item">
-					<div class="slider-item-content">
-						<div class="post-thumb mb-4">
-							<a href="blog-single.html">
-								<img src="..//images/slider/slider2.jpg" alt="" class="img-fluid">
-							</a>
-						</div>
-						<div class="slider-post-content">
-							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Travel</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Trip to California</a></h3>
-							<span class=" text-muted  text-capitalize">September 15, 2019</span>
-						</div>
-					</div>
-				</div>
-				<div class="slider-item">
-					<div class="slider-item-content">
-						<div class="post-thumb mb-4">
-							<a href="blog-single.html">
-								<img src="..//images/slider/slider3.jpg" alt="" class="img-fluid">
-							</a>
-						</div>
-						<div class="slider-post-content">
-							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Travel</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Trip to California</a></h3>
-							<span class=" text-muted  text-capitalize">September 15, 2019</span>
-						</div>
-					</div>
-				</div>
+			<div class="col-lg-12 col-sm-12 col-md-12 slider-wrap">				
+					@await Component.InvokeAsync("Slider")				
 			</div>
 		</div>
 	</div>
@@ -85,121 +20,121 @@
 				<div class="row">
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Travel" asp-controller="Category">
 								<img src="..//images/news/f1.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-extra text-sm text-uppercase letter-spacing-1">Explore</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">The best place to explore to enjoy</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Travel" asp-controller="Category">The best place to explore to enjoy</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">June 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="LifeStyle" asp-controller="Category">
 								<img src="..//images/news/f2.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Lifestyle</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">How to Make list for travelling alone</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="LifeStyle" asp-controller="Category">How to Make list for travelling alone</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">September 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Travel" asp-controller="Category">
 								<img src="..//images/news/f3.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class=" cat-name text-color font-sm font-extra text-uppercase letter-spacing">Food</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">5 ingredient cilantro vinaigrette</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Travel" asp-controller="Category">5 ingredient cilantro vinaigrette</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">September 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Weekends" asp-controller="Category">
 								<img src="..//images/news/f4.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Explore</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">A Simple Way to Feel Like Home When You Travel</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Weekends" asp-controller="Category">A Simple Way to Feel Like Home When You Travel</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">March 20, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="LifeStyle" asp-controller="Category">
 								<img src="..//images/news/f5.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Travel</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">What Type of Traveller Are You?</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="LifeStyle" asp-controller="Category">What Type of Traveller Are You?</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">September 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Travel" asp-controller="Category">
 								<img src="..//images/news/f6.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Experience</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">A Road Trip Review of the 2018</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Travel" asp-controller="Category">A Road Trip Review of the 2018</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">July 10, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Weekends" asp-controller="Category">
 								<img src="..//images/news/f7.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class=" cat-name text-color font-sm font-extra text-uppercase letter-spacing">music</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Portugal’s Sunset summer vission</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Weekends" asp-controller="Category">Portugal’s Sunset summer vission</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">September 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="LifeStyle" asp-controller="Category">
 								<img src="..//images/news/f8.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">beauty</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">The best soft Tropical Getaway</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="LifeStyle" asp-controller="Category">The best soft Tropical Getaway</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">March 12, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Travel" asp-controller="Category">
 								<img src="..//images/news/f9.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Travel</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">Memoriable Paris Girls Trip </a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Travel" asp-controller="Category">Memoriable Paris Girls Trip </a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">April 19, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="LifeStyle" asp-controller="Category">
 								<img src="..//images/news/f10.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Experience</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">How to Plan your Trip the Right Way</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="LifeStyle" asp-controller="Category">How to Plan your Trip the Right Way</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">February 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Weekends" asp-controller="Category">
 								<img src="..//images/news/f11.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class="cat-name text-color font-sm font-extra text-uppercase letter-spacing">Travel</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">8 Powerful Ways to Add Vibrant Colour to Your Life</a></h3>
+							<h3 class="post-title mt-1"><aasp-action ="Weekends" asp-controller="Category">8 Powerful Ways to Add Vibrant Colour to Your Life</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">August 15, 2019</span>
 						</article>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<article class="post-grid mb-5">
-							<a class="post-thumb mb-4 d-block" href="blog-single.html">
+							<a class="post-thumb mb-4 d-block" asp-action="Travel" asp-controller="Category">
 								<img src="..//images/news/f12.jpg" alt="" class="img-fluid w-100">
 							</a>
 							<span class=" cat-name text-color font-sm font-extra text-uppercase letter-spacing">Lifestyle</span>
-							<h3 class="post-title mt-1"><a href="blog-single.html">The best to-do list to help boost your productivity</a></h3>
+							<h3 class="post-title mt-1"><a asp-action="Travel" asp-controller="Category">The best to-do list to help boost your productivity</a></h3>
 							<span class="text-muted letter-spacing text-uppercase font-sm">October 2, 2019</span>
 						</article>
 					</div>
@@ -224,6 +159,7 @@
 		@Html.Partial("_PartialHomeSubscribe")
 		@Html.Partial("_PartialHomeFooter")
 	</div>
+</section>
 
 
 
