--- a/AspNetMvcBlog/App.Web.Mvc/Views/Blog/Search.cshtml
+++ b/AspNetMvcBlog/App.Web.Mvc/Views/Blog/Search.cshtml
@@ -1,16 +1,159 @@
 ﻿@Html.Partial("_PartialHeader")
 
-<section class="pt-5 padding-bottom">
-    <div class="input-group input-group-lg">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-sizing-lg">Search</span>
-        </div>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-        <a href="#" class="btn btn-primary">Search</a>
-    </div>
-    
-</section>
-
+<div class="container">
+	<div class="row">
+		<div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">			
+			<div class="mb-4 post-list border-bottom pb-4">
+				<div class="row no-gutters">
+					<div class="col-md-5">
+						<a class="post-thumb" href="blog-single.html">
+							<img src="..//images/fashion/img-2.jpg" alt="" class="img-fluid w-100">
+						</a>
+					</div>
+					<div class="col-md-7">
+						<div class="post-article mt-sm-3">
+							<div class="meta-cat">
+								<span class="letter-spacing cat-name font-extra text-uppercase font-sm">lifestyle</span>
+							</div>
+							<h3 class="post-title mt-2"><a href="blog-single.html">Bahamas morning</a></h3>
+							<div class="post-meta">
+								<ul class="list-inline">
+									<li class="post-like list-inline-item">
+										<span class="font-sm letter-spacing-1 text-uppercase"><i class="ti-time mr-2"></i>2 min read</span>
+									</li>
+									<li class="post-view list-inline-item letter-spacing-1">320 Views</li>
+								</ul>
+							</div>
+							<div class="post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Magnam nesciunt architecto quaerat necessitatibus tenetur ratione eius numquam!</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="mb-4 post-list border-bottom pb-4">
+				<div class="row no-gutters">
+					<div class="col-md-5">
+						<a class="post-thumb" href="blog-single.html">
+							<img src="..//images/fashion/img-3.jpg" alt="" class="img-fluid w-100">
+						</a>
+					</div>
+					<div class="col-md-7">
+						<div class="post-article mt-sm-3">
+							<div class="meta-cat">
+								<span class="letter-spacing cat-name font-extra text-uppercase font-sm">Travel</span>
+							</div>
+							<h3 class="post-title mt-2"><a href="blog-single.html">New summer hotspot</a></h3>
+							<div class="post-meta">
+								<ul class="list-inline">
+									<li class="post-like list-inline-item">
+										<span class="font-sm  letter-spacing-1 text-uppercase"><i class="ti-time mr-2"></i>5 min read</span>
+									</li>
+									<li class="post-view list-inline-item letter-spacing-1">380 Views</li>
+								</ul>
+							</div>
+							<div class="post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Magnam nesciunt architecto quaerat necessitatibus tenetur ratione eius numquam!</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="mb-4 post-list border-bottom pb-4">
+				<div class="row no-gutters">
+					<div class="col-md-5">
+						<a class="post-thumb" href="blog-single.html">
+							<img src="..//images/fashion/img-4.jpg" alt="" class="img-fluid w-100">
+						</a>
+					</div>
+					<div class="col-md-7">
+						<div class="post-article mt-sm-3">
+							<div class="meta-cat">
+								<span class="letter-spacing cat-name font-extra text-uppercase font-sm">Weekends</span>
+							</div>
+							<h3 class="post-title mt-2"><a href="blog-single.html">One Week Itinerary</a></h3>
+							<div class="post-meta">
+								<ul class="list-inline">
+									<li class="post-like list-inline-item">
+										<span class="font-sm letter-spacing-1 text-uppercase"><i class="ti-time mr-2"></i>4 min read</span>
+									</li>
+									<li class="post-view list-inline-item letter-spacing-1">89 Views</li>
+								</ul>
+							</div>
+							<div class="post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Magnam nesciunt architecto quaerat necessitatibus tenetur ratione eius numquam!</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="mb-4 post-list border-bottom pb-4">
+				<div class="row no-gutters">
+					<div class="col-md-5">
+						<a class="post-thumb" href="blog-single.html">
+							<img src="..//images/fashion/img-5.jpg" alt="" class="img-fluid w-100">
+						</a>
+					</div>
+					<div class="col-md-7">
+						<div class="post-article mt-sm-3">
+							<div class="meta-cat">
+								<span class="letter-spacing cat-name font-extra text-uppercase font-sm">lifestyle</span>
+							</div>
+							<h3 class="post-title mt-2"><a href="blog-single.html">Start Living Today</a></h3>
+							<div class="post-meta">
+								<ul class="list-inline">
+									<li class="post-like list-inline-item">
+										<span class="font-sm letter-spacing-1 text-uppercase"><i class="ti-time mr-2"></i>2 min read</span>
+									</li>
+									<li class="post-view list-inline-item letter-spacing-1">572 Views</li>
+								</ul>
+							</div>
+							<div class="post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Magnam nesciunt architecto quaerat necessitatibus tenetur ratione eius numquam!</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="mb-4 post-list border-bottom pb-4">
+				<div class="row no-gutters">
+					<div class="col-md-5">
+						<a class="post-thumb" href="blog-single.html">
+							<img src="..//images/fashion/img-6.jpg" alt="" class="img-fluid w-100">
+						</a>
+					</div>
+					<div class="col-md-7">
+						<div class="post-article mt-sm-3">
+							<div class="meta-cat">
+								<span class="letter-spacing cat-name font-extra text-uppercase font-sm">Travel</span>
+							</div>
+							<h3 class="post-title mt-2"><a href="blog-single.html">Hint of Spring</a></h3>
+							<div class="post-meta">
+								<ul class="list-inline">
+									<li class="post-like list-inline-item">
+										<span class="font-sm letter-spacing-1 text-uppercase"><i class="ti-time mr-2"></i>3 min read</span>
+									</li>
+									<li class="post-view list-inline-item letter-spacing-1">209 Views</li>
+								</ul>
+							</div>
+							<div class="post-content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Magnam nesciunt architecto quaerat necessitatibus tenetur ratione eius numquam!</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="pagination mt-5 pt-4">
+				<ul class="list-inline">
+					<li class="list-inline-item"><a href="#" class="active">1</a></li>
+					<li class="list-inline-item"><a href="#">2</a></li>
+					<li class="list-inline-item"><a href="#">3</a></li>
+					<li class="list-inline-item"><a href="#" class="prev-posts"><i class="ti-arrow-right"></i></a></li>
+				</ul>
+			</div>
+		</div>		
+	</div>
+</div>
 
 
 @Html.Partial("_PartialFooter")
