--- a/AspNetMvcBlog/App.Web.Mvc/Views/Page/Detail.cshtml
+++ b/AspNetMvcBlog/App.Web.Mvc/Views/Page/Detail.cshtml
@@ -1,24 +1,7 @@
 ﻿@Html.Partial("_PartialHeader")
 
 <!--search overlay start-->
-<div class="search-wrap">
-    <div class="overlay">
-        <form action="#" class="search-form">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-10 col-9">
-                        <input type="text" class="form-control" placeholder="Search..." />
-                    </div>
-                    <div class="col-md-2 col-3 text-right">
-                        <div class="search_toggle toggle-wrap d-inline-block">
-                            <i class="ti-close"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+@Html.Partial("_PartialSearch")
 <!--search overlay end-->
 <div class="breadcrumb-wrapper">
     <div class="container">
