--- a/AspNetMvcBlog/App.Web.Mvc/Views/Shared/_PartialHomeFooter.cshtml
+++ b/AspNetMvcBlog/App.Web.Mvc/Views/Shared/_PartialHomeFooter.cshtml
@@ -8,10 +8,10 @@
 				<ul class="list-inline footer-socials-2 text-center">
 					<li class="list-inline-item"><a href="#">Privacy policy</a></li>
 					<li class="list-inline-item"><a href="#">Support</a></li>
-					<li class="list-inline-item"><a href="#">About</a></li>
-					<li class="list-inline-item"><a href="#">Contact</a></li>
+					<li class="list-inline-item"><a asp-action="Detail" asp-controller="Page">About</a></li>
+				<li class="list-inline-item"><a asp-action="Contact" asp-controller="Blog">Contact</a></li>
 					<li class="list-inline-item"><a href="#">Terms</a></li>
-					<li class="list-inline-item"><a href="#">Category</a></li>
+				<li class="list-inline-item"><a asp-action="LifeStyle" asp-controller="Category">Category</a></li>
 				</ul>
 			</div>
 		</div>
